# lemmings

./: .gitignore  .gitmodules  README.md  WORKFLOW_ARCHITECTURE.md  pyproject.toml  requirements.txt  tabby_config.yml  tabby_config_qwen3.yml
.cursor/rules/: conventional_commits.mdc  general.mdc  python_venv.mdc
docs/: ARCHITECTURE.md  DESIGN_RATIONALE.md  EVENT_CHAIN.md  FUTURE_CONSIDERATIONS.md  LEMMINGS.md  MULTI_MODEL_PLAN.md  SUPERVISOR_DESIGN.md
scripts/: run_e2e.sh
src/agents/: __init__.py  __main__.py  callbacks.py  config.py  dashboard.py  graph.py  llm.py  logging_config.py  main.py  normaliser.py  task_states.py  workflow_status.py  workspace.py
src/agents/agents/: __init__.py  assessor.py  coder.py  expander.py  gap_analysis.py  implementor.py  intake.py  intent.py  milestone.py  planner.py  prioritizer.py  qa.py  report.py  researcher.py  scope_agent.py  summarizer.py  task_planner.py  validator.py
src/agents/rag/: README.md  __init__.py  __main__.py  chunker.py  context_providers.py  indexer.py  retriever.py  vectorstore.py
src/agents/state/: __init__.py  message_history.py  state_manager.py  status_history.py  status_steam_handler.py
tests/: README.md  __init__.py  conftest.py
tests/agents/: __init__.py  test_implementor.py  test_researcher.py  test_scope_agent.py  test_subagents.py  test_task_planner.py
tests/e2e/: __init__.py  conftest.py  test_e2e_workflow.py
tests/integration/: __init__.py  test_subgraphs.py
tests/unit/: __init__.py  test_ai_message_stream.py  test_helper_nodes.py  test_routing.py  test_state.py  test_tools.py
(+29 files in other folders)
